Table resume {
    id           int       [pk, increment]
    resume_id    char(32)  [not null, unique]
    last_login   datetime  [not null]
    name         varchar(32) [not null]
    status       enum 
    information  text
    phone        varchar(11)
    email        varchar(100) [unique]
    expectation  text
    education    text
    certificate  text
    language     text
    skills       text
    description  text
}

Table file {
    id           int       [pk, increment]
    resume_id    char(32)  [not null, ref: > resume.resume_id]
    file_path    varchar(255) [not null]
    uploaded_at  datetime  [not null, default: 'CURRENT_TIMESTAMP']
}

Table work_experience {
    id             int     [pk, increment]
    resume_id      char(32) [not null, ref: > resume.resume_id]
    company_name   varchar(255) [not null]
    job_title      varchar(255) [not null]
    start_date     date    [not null]
    end_date       date
    description    text
}

Table project_experience {
    id             int     [pk, increment]
    resume_id      char(32) [not null, ref: > resume.resume_id]
    project_name   varchar(255) [not null]
    role           varchar(100)
    start_date     date    [not null]
    end_date       date
    description    text
}

Table job {
    id           int       [pk, increment]
    company_name varchar(255) [not null]
    title        varchar(64) [not null]
    location     varchar(32)
    requirements text
    description  text       [not null]
}

Table scraper_task {
    id             int     [pk, increment]
    parameters     varchar(255)
    status         enum
    created_at     datetime [not null, default: 'CURRENT_TIMESTAMP']
}

Table chat_log {
    id          int         [pk, increment]
    resume_id   char(32)    [not null, ref: > resume.resume_id]
    job_id      int         [not null, ref: > job.id]
    sender      enum
    content     text        [not null]
    timestamp   datetime    [not null]
}

Table score {
    id             int     [pk, increment]
    resume_id      char(32) [not null, ref: > resume.resume_id]
    job_id         int     [not null, ref: > job.id]
    initial_score  float
    final_score    float
    status         enum
    updated_at     datetime [default: 'CURRENT_TIMESTAMP', on_update: 'CURRENT_TIMESTAMP']
    Indexes {
        (resume_id, job_id) [unique]
    }
}

